# RhpcBLASctl

./: ChangeLog  DESCRIPTION  MD5  README  cleanup  configure  configure.ac
R/: blasctl.R
man/: RhpcBLASctl-package.Rd
src/: Makevars.in  Makevars.win  blasctl.c  blasctl.h  config.h.in  registerDynamicSymbol.c
src/dust/: DESCRIPTION.in  mk
